aliyun_install/ingress-nginx/dashboard-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/secure-backends: "true"
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - k8s.thinker.vc
    secretName: kubernetes-dashboard-certs
  rules:
  - host: k8s.thinker.vc
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
